Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
Are the benchmarks not being built in CI?
../src/arrow/compute/kernels/filter_benchmark.cc:45:18: error: no matching function for call to 'Filter' ABORT_NOT_OK(Filter(&ctx, Datum(array), Datum(filter), &out)); ^~~~~~ ../src/arrow/testing/gtest_util.h:109:18: note: expanded from macro 'ABORT_NOT_OK' auto _res = (expr); \ ^~~~ ../src/arrow/compute/kernels/filter.h:65:8: note: candidate function not viable: requires 5 arguments, but 4 were provided Status Filter(FunctionContext* ctx, const Datum& values, const Datum& filter, ^ ../src/arrow/compute/kernels/filter_benchmark.cc:66:18: error: no matching function for call to 'Filter' ABORT_NOT_OK(Filter(&ctx, Datum(array), Datum(filter), &out)); ^~~~~~ ../src/arrow/testing/gtest_util.h:109:18: note: expanded from macro 'ABORT_NOT_OK' auto _res = (expr); \ ^~~~ ../src/arrow/compute/kernels/filter.h:65:8: note: candidate function not viable: requires 5 arguments, but 4 were provided Status Filter(FunctionContext* ctx, const Datum& values, const Datum& filter, ^ ../src/arrow/compute/kernels/filter_benchmark.cc:90:18: error: no matching function for call to 'Filter' ABORT_NOT_OK(Filter(&ctx, Datum(array), Datum(filter), &out)); ^~~~~~ ../src/arrow/testing/gtest_util.h:109:18: note: expanded from macro 'ABORT_NOT_OK' auto _res = (expr); \ ^~~~ ../src/arrow/compute/kernels/filter.h:65:8: note: candidate function not viable: requires 5 arguments, but 4 were provided Status Filter(FunctionContext* ctx, const Datum& values, const Datum& filter, ^ 3 errors generated.
Attachments
Issue Links
- links to