ARROW-8331: [C++] Fix filter_benchmark.cc compilation

This issue exposes a blind spot in our CI -- we are not checking that our benchmarks compile. I think we should alter the CI to fix this -- I opened ARROW-8333.

Closes #6834 from wesm/ARROW-8331

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>